--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
+[submodule "external/milsko"]
+	path = external/milsko
+	url = https://github.com/pyrite-dev/milsko
 [submodule "mdebase"]
 	path = mdebase
 	url = ../mdebase
 [submodule "mdelibs"]
 	path = mdelibs
 	url = ../mdelibs
-[submodule "external/milsko"]
-	path = external/milsko
-	url = https://github.com/pyrite-dev/milsko
+[submodule "mdeutils"]
+	path = mdeutils
+	url = ../mdeutils
