--- a/include/config.h.in
+++ b/include/config.h.in
@@ -5,4 +5,6 @@
 #define CONFDIR "@CMAKE_INSTALL_FULL_SYSCONFDIR@"
 #define DATADIR "@CMAKE_INSTALL_FULL_DATAROOTDIR@"
 
+#cmakedefine HAS_PATHS_H
+
 #endif
