--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ check_include_files(paths.h HAS_PATHS_H)
 include(GNUInstallDirs)
 set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_FULL_LIBDIR}")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-configure_file(include/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
+configure_file(include/config.h.in config.h)
+configure_file(wizard.sh.in wizard.sh)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 set(CLASSIC_THEME 1)
