--- a/include/config.h.in
+++ b/include/config.h.in
@@ -2,7 +2,7 @@
 #define __CONFIG_H__
 
 #define PREFIX "@CMAKE_INSTALL_PREFIX@"
-#define CONFDIR "@CMAKE_INSTALL_FULL_SYSCONFDIR@"
+#define SYSCONFDIR "@CMAKE_INSTALL_FULL_SYSCONFDIR@"
 #define DATAROOTDIR "@CMAKE_INSTALL_FULL_DATAROOTDIR@"
 #define ICON128DIR DATAROOTDIR "/mde/icons/128x128"
 #define ICON64DIR DATAROOTDIR "/mde/icons/64x64"
