--- a/include/config.h.in
+++ b/include/config.h.in
@@ -4,10 +4,10 @@
 #define PREFIX "@CMAKE_INSTALL_PREFIX@"
 #define SYSCONFDIR "@CMAKE_INSTALL_FULL_SYSCONFDIR@"
 #define DATAROOTDIR "@CMAKE_INSTALL_FULL_DATAROOTDIR@"
-#define ICON128DIR DATAROOTDIR "/mde/icons/128x128"
-#define ICON64DIR DATAROOTDIR "/mde/icons/64x64"
-#define ICON32DIR DATAROOTDIR "/mde/icons/32x32"
-#define ICON16DIR DATAROOTDIR "/mde/icons/16x16"
+#define ICON128DIR DATAROOTDIR "/icons/mde/128x128"
+#define ICON64DIR DATAROOTDIR "/icons/mde/64x64"
+#define ICON32DIR DATAROOTDIR "/icons/mde/32x32"
+#define ICON16DIR DATAROOTDIR "/icons/mde/16x16"
 
 #cmakedefine HAS_PATHS_H
 
