--- a/include/config.h.in
+++ b/include/config.h.in
@@ -4,6 +4,7 @@
 #define PREFIX "@CMAKE_INSTALL_PREFIX@"
 #define SYSCONFDIR "@CMAKE_INSTALL_FULL_SYSCONFDIR@"
 #define DATAROOTDIR "@CMAKE_INSTALL_FULL_DATAROOTDIR@"
+#define LIBDIR "@CMAKE_INSTALL_FULL_LIBDIR@"
 #define ICON128DIR DATAROOTDIR "/icons/mde/128x128"
 #define ICON64DIR DATAROOTDIR "/icons/mde/64x64"
 #define ICON32DIR DATAROOTDIR "/icons/mde/32x32"
