--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,4 @@ if(NOT CMAKE_SYSTEM_NAME STREQUAL "Windows")
 add_subdirectory(mdebase)
 endif()
 add_subdirectory(mdeutils)
+add_subdirectory(mdecmake)
